fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,12 @@ html {
   font-family: Helvetica, sans-serif;
   font-size: 1.4rem;
 
-  height: 100vh;
+  /* height: 100vh; */
   position: relative;
+}
+
+body {
+  margin: 0px;
 }
 
 .footer a {
@@ -24,26 +28,30 @@ html {
   bottom: 60px; */
   /* left: calc(50vw - 125px); */
   margin: auto;
-  width: 250px;
+  width: 350px;
   background-color: white;
   color: black;
   padding-top: 20px;
   padding-bottom: 20px;
   text-align: center;
 
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 #container {
   margin: 0%;
+  height: 70vh;
 }
 
 #circle {
   position: relative;
-  width: 100%;
-  padding-bottom: 100%;
-  overflow: hidden;
-  height: 100px;
+  width: 600px;
+  height: 600px;
+
+  max-width: 100vw;
+  max-height: 100vw;
+  margin: auto;
+  /* overflow: hidden; */
 }
 
 #circle text {
